--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body{
 
 .main-block{
 	width: 100%;
-	height: 100%;
 	background: url(bg.jpg);
 	background-repeat: repeat;
 }
@@ -24,6 +23,7 @@ body{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+	position: relative;
 }
 
 .center-flex-container{
@@ -142,4 +142,16 @@ body{
 
 .text {
 	line-height: 1.5;
+}
+
+.left-lime {
+	position: absolute;
+	left: -65px;
+	top: 0px;
+}
+
+.right-lime {
+	position: absolute;
+	right: -65px;
+	top: 100px;
 }
