--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body{
 
 .main-block{
 	width: 100%;
-	background: url(bg.jpg);
+	background: url(assets/bg.jpg);
 	background-repeat: repeat;
 }
 
@@ -53,7 +53,7 @@ body{
 
 
 .menu {
-	background: url(menu-bg.png);
+	background: url(assets/menu-bg.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -90,7 +90,7 @@ body{
 }
 
 .green-ribbon {
-	background: url(green-ribbon.png);
+	background: url(assets/green-ribbon.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	vertical-align: middle;
@@ -110,7 +110,7 @@ body{
 }
 
 .pink-ribbon {
-	background: url(pink-ribbon.png);
+	background: url(assets/pink-ribbon.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	vertical-align: middle;
