--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,11 @@ body{
 }
 
 .main-block{
+	overflow-x: hidden;
 	width: 100%;
 	background: url(assets/bg.jpg);
 	background-repeat: repeat;
+	z-index: -2;
 }
 
 .fullwidth {
@@ -53,18 +55,18 @@ body{
 
 
 .menu {
-	background: url(assets/menu-bg.png);
+	background: url(assets/menu-bg.png) no-repeat center top;
 	background-size: cover;
-	background-repeat: no-repeat;
+
 	width: 100%;
-	height: 55px;
+	height: 60px;
 	padding-left: 30px;
 	padding-right: 10px;
 	vertical-align: middle;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 }
 
 
@@ -72,7 +74,9 @@ body{
 	color: white;
 	margin-top: auto;
 	margin-bottom: auto;
-	flex-grow: 1;
+	flex: 0 1 auto;
+	font-weight: bold;
+	font-size: calc(0.5vw + 12px);
 }
 
 .logo {
@@ -86,7 +90,8 @@ body{
 	text-shadow: #808080 0 4px 4px ;
 	color: white;
 	vertical-align: middle;
-	z-index: 100;
+	position: relative;
+	z-index: 2;
 }
 
 .green-ribbon {
@@ -98,6 +103,8 @@ body{
 	margin-bottom: 20px;
 	height: 70px;
 	width: 80%;
+	position: relative;
+	z-index: 2;
 }
 
 .section-pink-name {
@@ -106,7 +113,8 @@ body{
 	text-shadow: #808080 0 4px 4px ;
 	color: white;
 	vertical-align: middle;
-	z-index: 100;
+	position: relative;
+	z-index: 2;
 }
 
 .pink-ribbon {
@@ -118,19 +126,19 @@ body{
 	margin-bottom: 20px;
 	height: 70px;
 	width: 80%;
+	position: relative;
+	z-index: 2;
 }
 
-.margin-bottom12{
-	margin-bottom: 12px;
-}
 
 .product-card{
 	margin: 16px;
 	cursor: pointer;
+	transition: transform 0.3s;
 } 
 
 .product-card:hover {
-	transform: scale(1.3);
+	transform: scale(1.05);
     transition: transform 0.3s;
     z-index: 100;
 } 
@@ -140,18 +148,86 @@ body{
 	color: var(--pink);
 }
 
+.card-img-top {
+	max-width: 300px;
+}
+
 .text {
 	line-height: 1.5;
+	z-index: 99;
+	position: relative;
 }
 
-.left-lime {
+.left-bottom-lime {
 	position: absolute;
 	left: -65px;
-	top: 0px;
+	top: 100px;
+	z-index: 0;
 }
 
-.right-lime {
+.right-bottom-lime {
 	position: absolute;
 	right: -65px;
 	top: 100px;
+	z-index: 1;
+}
+
+.left-top-lime {
+	position: absolute;
+	left: -65px;
+	top: 0px;
+	z-index: 0;
+}
+
+.right-top-lime {
+	position: absolute;
+	right: -65px;
+	top: 0px;
+	z-index: 1;
+}
+
+@media (min-width: 900px) {
+
+	.left-bottom-lime {
+		left: 0px;
+		top: 100px;
+	}
+
+	.right-bottom-lime {
+		right: 0px;
+		top: 100px;
+	}
+
+	.left-top-lime {
+		left: 0px;
+		top: 0px;
+	}
+
+	.right-top-lime {
+		right: 0px;
+		top: 0px;
+	}
+
+}
+
+
+tr {
+	background-color: #c7c7c7;
+}
+
+td {
+	border: 1px solid black; text-align: center; vertical-align: middle; background-color: #d5d5d5;
+}
+
+.table-head {
+	background-color: #c7c7c7;
+}
+
+.table-head-el {
+	padding: 2px; border: 1px solid black; text-align: center; width: 25%;
+}
+
+
+.table-overflow {
+	overflow-x: auto; overflow-y: hidden;
 }
